--- a/wordpress/wp-content/themes/kbharkiv/resources/assets/styles/common/_variables.scss
+++ b/wordpress/wp-content/themes/kbharkiv/resources/assets/styles/common/_variables.scss
@@ -36,9 +36,9 @@ $blue:    #000c2e !default;
 $indigo:  #6610f2 !default;
 $purple:  #685966 !default;
 $pink:    #e83e8c !default;
-$red:     #8a3314 !default;
+$red:     #913b1c !default;
 $orange:  #fd7e14 !default;
-$yellow:  #ffc107 !default;
+$yellow:  #665e4f !default;
 $green:   #3f5b58 !default;
 $teal:    #20c997 !default;
 $cyan:    #04436e !default;
@@ -189,8 +189,8 @@ $border-radius-sm:            0.125rem !default;
 //
 
 $breadcrumb-bg:                     $blue !default;
-$breadcrumb-divider-color:          rgba(255, 255, 255, 0.75) !default;
-$breadcrumb-active-color:           rgba(255, 255, 255, 0.75) !default;
+$breadcrumb-divider-color:          rgba(255, 255, 255, 0.72) !default;
+$breadcrumb-active-color:           rgba(255, 255, 255, 0.72) !default;
 // $breadcrumb-divider:                quote("/") !default;
 
 $breadcrumb-border-radius:          0 !default;
