--- a/wordpress/wp-content/themes/kbharkiv/resources/assets/styles/layouts/_single-arrangementer.scss
+++ b/wordpress/wp-content/themes/kbharkiv/resources/assets/styles/layouts/_single-arrangementer.scss
@@ -39,9 +39,14 @@
       margin-bottom: 2.5rem;
     }
 
-    .h6,
     .btn {
       margin-top: 1.5rem;
+    }
+
+    .h6 {
+      margin-top: 1.5rem;
+      color: $white;
+      opacity: 0.72;
     }
   }
 }
