--- a/wordpress/wp-content/themes/kbharkiv/resources/assets/styles/modules/module-gallery.scss
+++ b/wordpress/wp-content/themes/kbharkiv/resources/assets/styles/modules/module-gallery.scss
@@ -55,6 +55,10 @@
     &.active {
       display: block;
     }
+
+    h6 {
+      color: mix(white, $blue, 48%);
+    }
   }
 }
 
